# consumer-testapp-lanek

./: .env.example  .gitignore  GITHUB_SECRETS.md  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pip-compile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  consumption.py  user.py
backend/app/routes/: auth.py  consumption.py
backend/app/schemas/: __init__.py
backend/app/utils/: jwt_utils.py
backend/migrations/versions/: 0ed55baa0765_add_user_model.py  483a1c3bdaaf_add_consumption_model.py
backend/tests/: test_auth.py  test_auth_integration.py  test_consumption.py  test_debug.py  test_health.py
docs/: architecture-diagram.mermaid  architecture.md  erd-diagram.mermaid  navigation-diagram.mermaid
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/__tests__/: dashboard-analytics.test.tsx  health.test.tsx  register-core.test.tsx  register.test.tsx
frontend/__tests__/components/: AnalyticsCards.test.tsx  Button.test.tsx  ConsumptionForm.test.tsx  ConsumptionList.test.tsx  Input.test.tsx  MonthlyConsumptionChart.test.tsx  PasswordStrengthIndicator.test.tsx
frontend/__tests__/lib/: api.test.ts
frontend/__tests__/types/: consumption.test.ts  registration.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/consumption/add/: page.tsx
frontend/src/app/consumption/list/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ConsumptionForm.tsx
frontend/src/components/analytics/: AnalyticsCards.tsx  MonthlyConsumptionChart.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  PasswordStrengthIndicator.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: consumption.ts  login.ts  registration.ts
github-docs/: DOCKER.md  PruebaTecnicaLanek.md  architecture-diagram-mvp.md  database-erd-mvp.md  epics-and-user-stories-mvp.md  github-issues-summary.md  navigation-diagram-mvp.md  task-tracker.md
scripts/: health-check.sh
